fixes font size on mobile

--- a/web/src/components/project-preview-grid.module.css
+++ b/web/src/components/project-preview-grid.module.css
@@ -36,11 +36,17 @@
   align-items: center;
   text-align: center;
   font-size: 16px;
+  padding: 1em;
+  line-height: 1.5;
+  @media (min-width: 450px) {
+    line-height: 1.3;
+  }
   @media (min-width: 600px) {
     font-size: 14px;
   }
-  @media (min-width: 800px) {
+  @media (min-width: 1000px) {
     font-size: 20px;
+    line-height: 1.5;
   }
 }
 
